清除discus，修改为duoshuo

--- a/themes/light/layout/_partial/comment.ejs
+++ b/themes/light/layout/_partial/comment.ejs
@@ -1,4 +1,4 @@
-<% if (config.disqus_shortname && page.comments){ %>
+<% if (config.duoshuo_shortname && page.comments){ %>
 <section id="comment">
   <!-- Duoshuo Comment BEGIN -->
   <div class="ds-thread"></div>
