--- a/themes/light/layout/_partial/comment.ejs
+++ b/themes/light/layout/_partial/comment.ejs
@@ -1,20 +1,18 @@
-<% if (config.duoshuo_shortname && page.comments){ %>
-<section id="comment">
-<!-- 多说评论框 start -->
-    <div class="ds-thread" data-thread-key="<%= page.layout %>-<%= page.path %>" data-title="<%= page.title %>" data-url="<%= page.permalink %>"></div>
-<!-- 多说评论框 end -->
-<!-- 多说公共JS代码 start (一个网页只需插入一次) -->
-<script type="text/javascript">
-var duoshuoQuery = {short_name:"crazyli0nsblog"};
-    (function() {
-        var ds = document.createElement('script');
-        ds.type = 'text/javascript';ds.async = true;
-        ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
-        ds.charset = 'UTF-8';
-        (document.getElementsByTagName('head')[0] 
-         || document.getElementsByTagName('body')[0]).appendChild(ds);
+<% if ((page.layout == 'post' || page.layout == 'page') && config.disqus_shortname && page.comments){ %>
+    <script type="text/javascript">
+    var disqus_shortname = '<%= config.disqus_shortname %>';
+    var disqus_config = function () {
+        this.page.url = '<%= config.url %>/<%= page.path %>';
+        this.page.identifier = '/<%= page.path %>';
+        this.page.title = '<%= page.title %>';
+    };
+    (function(){
+      var d = document;
+      var dsq = d.createElement('script');
+      dsq.type = 'text/javascript';
+      dsq.async = true;
+      dsq.src = '//' + disqus_shortname + '.disqus.com/<% if (page.comments){ %>embed.js<% } else { %>count.js<% } %>';
+      (d.head || d.body).appendChild(dsq);
     })();
     </script>
-<!-- 多说公共JS代码 end -->
-</section>
 <% } %>
