--- a/themes/light/layout/_partial/comment.ejs
+++ b/themes/light/layout/_partial/comment.ejs
@@ -1,18 +1,14 @@
-<% if ((page.layout == 'post' || page.layout == 'page') && config.disqus_shortname && page.comments){ %>
-    <script type="text/javascript">
-    var disqus_shortname = '<%= config.disqus_shortname %>';
-    var disqus_config = function () {
-        this.page.url = '<%= config.url %>/<%= page.path %>';
-        this.page.identifier = '/<%= page.path %>';
-        this.page.title = '<%= page.title %>';
-    };
-    (function(){
-      var d = document;
-      var dsq = d.createElement('script');
-      dsq.type = 'text/javascript';
-      dsq.async = true;
-      dsq.src = '//' + disqus_shortname + '.disqus.com/<% if (page.comments){ %>embed.js<% } else { %>count.js<% } %>';
-      (d.head || d.body).appendChild(dsq);
-    })();
-    </script>
+<% if (page.comments){ %>
+<section id="comment">
+  <h1 class="title"><%= __('comment') %></h1>
+  <% if (theme.comment_provider == "facebook") {
+      if (theme.facebook) { %>
+      <%- partial('_partial/facebook_comment', {fbConfig: theme.facebook}) %>
+      <% } %>
+  <% } else if(config.disqus_shortname) { %>
+  <div id="disqus_thread">
+    <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+  </div>
+  <% } %>
+</section>
 <% } %>
